--- a/_notebooks/2021-10-30-Scatters.ipynb
+++ b/_notebooks/2021-10-30-Scatters.ipynb
@@ -11,11 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash.dr.scatter import mixture_scatter, within_scatter, between_scatter\n",
+    "from dash.dr.features import mixture_scatter, within_scatter, between_scatter\n",
+    "from dash.dr.features import fisher_selection\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt"
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,10 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[38.9562]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_new = y.astype(int) - 1\n",
+    "fisher_selection(X, y_new)"
+   ]
   },
   {
    "cell_type": "code",
