--- a/_notebooks/2021-10-30-Scatters.ipynb
+++ b/_notebooks/2021-10-30-Scatters.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "from dash.dr.features import mixture_scatter, within_scatter, between_scatter\n",
-    "from dash.dr.features import fisher_selection\n",
+    "from dash.dr.features import fisher_selection, recursive_feat_elimination, qr_selection\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt"
@@ -130,6 +130,342 @@
    "source": [
     "y_new = y.astype(int) - 1\n",
     "fisher_selection(X, y_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.4 0.2]\n",
+      " [1.4 0.2]\n",
+      " [1.3 0.2]\n",
+      " [1.5 0.2]\n",
+      " [1.4 0.2]\n",
+      " [1.7 0.4]\n",
+      " [1.4 0.3]\n",
+      " [1.5 0.2]\n",
+      " [1.4 0.2]\n",
+      " [1.5 0.1]\n",
+      " [1.5 0.2]\n",
+      " [1.6 0.2]\n",
+      " [1.4 0.1]\n",
+      " [1.1 0.1]\n",
+      " [1.2 0.2]\n",
+      " [1.5 0.4]\n",
+      " [1.3 0.4]\n",
+      " [1.4 0.3]\n",
+      " [1.7 0.3]\n",
+      " [1.5 0.3]\n",
+      " [1.7 0.2]\n",
+      " [1.5 0.4]\n",
+      " [1.  0.2]\n",
+      " [1.7 0.5]\n",
+      " [1.9 0.2]\n",
+      " [1.6 0.2]\n",
+      " [1.6 0.4]\n",
+      " [1.5 0.2]\n",
+      " [1.4 0.2]\n",
+      " [1.6 0.2]\n",
+      " [1.6 0.2]\n",
+      " [1.5 0.4]\n",
+      " [1.5 0.1]\n",
+      " [1.4 0.2]\n",
+      " [1.5 0.1]\n",
+      " [1.2 0.2]\n",
+      " [1.3 0.2]\n",
+      " [1.5 0.1]\n",
+      " [1.3 0.2]\n",
+      " [1.5 0.2]\n",
+      " [1.3 0.3]\n",
+      " [1.3 0.3]\n",
+      " [1.3 0.2]\n",
+      " [1.6 0.6]\n",
+      " [1.9 0.4]\n",
+      " [1.4 0.3]\n",
+      " [1.6 0.2]\n",
+      " [1.4 0.2]\n",
+      " [1.5 0.2]\n",
+      " [1.4 0.2]\n",
+      " [4.7 1.4]\n",
+      " [4.5 1.5]\n",
+      " [4.9 1.5]\n",
+      " [4.  1.3]\n",
+      " [4.6 1.5]\n",
+      " [4.5 1.3]\n",
+      " [4.7 1.6]\n",
+      " [3.3 1. ]\n",
+      " [4.6 1.3]\n",
+      " [3.9 1.4]\n",
+      " [3.5 1. ]\n",
+      " [4.2 1.5]\n",
+      " [4.  1. ]\n",
+      " [4.7 1.4]\n",
+      " [3.6 1.3]\n",
+      " [4.4 1.4]\n",
+      " [4.5 1.5]\n",
+      " [4.1 1. ]\n",
+      " [4.5 1.5]\n",
+      " [3.9 1.1]\n",
+      " [4.8 1.8]\n",
+      " [4.  1.3]\n",
+      " [4.9 1.5]\n",
+      " [4.7 1.2]\n",
+      " [4.3 1.3]\n",
+      " [4.4 1.4]\n",
+      " [4.8 1.4]\n",
+      " [5.  1.7]\n",
+      " [4.5 1.5]\n",
+      " [3.5 1. ]\n",
+      " [3.8 1.1]\n",
+      " [3.7 1. ]\n",
+      " [3.9 1.2]\n",
+      " [5.1 1.6]\n",
+      " [4.5 1.5]\n",
+      " [4.5 1.6]\n",
+      " [4.7 1.5]\n",
+      " [4.4 1.3]\n",
+      " [4.1 1.3]\n",
+      " [4.  1.3]\n",
+      " [4.4 1.2]\n",
+      " [4.6 1.4]\n",
+      " [4.  1.2]\n",
+      " [3.3 1. ]\n",
+      " [4.2 1.3]\n",
+      " [4.2 1.2]\n",
+      " [4.2 1.3]\n",
+      " [4.3 1.3]\n",
+      " [3.  1.1]\n",
+      " [4.1 1.3]\n",
+      " [6.  2.5]\n",
+      " [5.1 1.9]\n",
+      " [5.9 2.1]\n",
+      " [5.6 1.8]\n",
+      " [5.8 2.2]\n",
+      " [6.6 2.1]\n",
+      " [4.5 1.7]\n",
+      " [6.3 1.8]\n",
+      " [5.8 1.8]\n",
+      " [6.1 2.5]\n",
+      " [5.1 2. ]\n",
+      " [5.3 1.9]\n",
+      " [5.5 2.1]\n",
+      " [5.  2. ]\n",
+      " [5.1 2.4]\n",
+      " [5.3 2.3]\n",
+      " [5.5 1.8]\n",
+      " [6.7 2.2]\n",
+      " [6.9 2.3]\n",
+      " [5.  1.5]\n",
+      " [5.7 2.3]\n",
+      " [4.9 2. ]\n",
+      " [6.7 2. ]\n",
+      " [4.9 1.8]\n",
+      " [5.7 2.1]\n",
+      " [6.  1.8]\n",
+      " [4.8 1.8]\n",
+      " [4.9 1.8]\n",
+      " [5.6 2.1]\n",
+      " [5.8 1.6]\n",
+      " [6.1 1.9]\n",
+      " [6.4 2. ]\n",
+      " [5.6 2.2]\n",
+      " [5.1 1.5]\n",
+      " [5.6 1.4]\n",
+      " [6.1 2.3]\n",
+      " [5.6 2.4]\n",
+      " [5.5 1.8]\n",
+      " [4.8 1.8]\n",
+      " [5.4 2.1]\n",
+      " [5.6 2.4]\n",
+      " [5.1 2.3]\n",
+      " [5.1 1.9]\n",
+      " [5.9 2.3]\n",
+      " [5.7 2.5]\n",
+      " [5.2 2.3]\n",
+      " [5.  1.9]\n",
+      " [5.2 2. ]\n",
+      " [5.4 2.3]\n",
+      " [5.1 1.8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = recursive_feat_elimination(X, y)\n",
+    "print(end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 1.4],\n",
+       "       [4.9, 1.4],\n",
+       "       [4.7, 1.3],\n",
+       "       [4.6, 1.5],\n",
+       "       [5. , 1.4],\n",
+       "       [5.4, 1.7],\n",
+       "       [4.6, 1.4],\n",
+       "       [5. , 1.5],\n",
+       "       [4.4, 1.4],\n",
+       "       [4.9, 1.5],\n",
+       "       [5.4, 1.5],\n",
+       "       [4.8, 1.6],\n",
+       "       [4.8, 1.4],\n",
+       "       [4.3, 1.1],\n",
+       "       [5.8, 1.2],\n",
+       "       [5.7, 1.5],\n",
+       "       [5.4, 1.3],\n",
+       "       [5.1, 1.4],\n",
+       "       [5.7, 1.7],\n",
+       "       [5.1, 1.5],\n",
+       "       [5.4, 1.7],\n",
+       "       [5.1, 1.5],\n",
+       "       [4.6, 1. ],\n",
+       "       [5.1, 1.7],\n",
+       "       [4.8, 1.9],\n",
+       "       [5. , 1.6],\n",
+       "       [5. , 1.6],\n",
+       "       [5.2, 1.5],\n",
+       "       [5.2, 1.4],\n",
+       "       [4.7, 1.6],\n",
+       "       [4.8, 1.6],\n",
+       "       [5.4, 1.5],\n",
+       "       [5.2, 1.5],\n",
+       "       [5.5, 1.4],\n",
+       "       [4.9, 1.5],\n",
+       "       [5. , 1.2],\n",
+       "       [5.5, 1.3],\n",
+       "       [4.9, 1.5],\n",
+       "       [4.4, 1.3],\n",
+       "       [5.1, 1.5],\n",
+       "       [5. , 1.3],\n",
+       "       [4.5, 1.3],\n",
+       "       [4.4, 1.3],\n",
+       "       [5. , 1.6],\n",
+       "       [5.1, 1.9],\n",
+       "       [4.8, 1.4],\n",
+       "       [5.1, 1.6],\n",
+       "       [4.6, 1.4],\n",
+       "       [5.3, 1.5],\n",
+       "       [5. , 1.4],\n",
+       "       [7. , 4.7],\n",
+       "       [6.4, 4.5],\n",
+       "       [6.9, 4.9],\n",
+       "       [5.5, 4. ],\n",
+       "       [6.5, 4.6],\n",
+       "       [5.7, 4.5],\n",
+       "       [6.3, 4.7],\n",
+       "       [4.9, 3.3],\n",
+       "       [6.6, 4.6],\n",
+       "       [5.2, 3.9],\n",
+       "       [5. , 3.5],\n",
+       "       [5.9, 4.2],\n",
+       "       [6. , 4. ],\n",
+       "       [6.1, 4.7],\n",
+       "       [5.6, 3.6],\n",
+       "       [6.7, 4.4],\n",
+       "       [5.6, 4.5],\n",
+       "       [5.8, 4.1],\n",
+       "       [6.2, 4.5],\n",
+       "       [5.6, 3.9],\n",
+       "       [5.9, 4.8],\n",
+       "       [6.1, 4. ],\n",
+       "       [6.3, 4.9],\n",
+       "       [6.1, 4.7],\n",
+       "       [6.4, 4.3],\n",
+       "       [6.6, 4.4],\n",
+       "       [6.8, 4.8],\n",
+       "       [6.7, 5. ],\n",
+       "       [6. , 4.5],\n",
+       "       [5.7, 3.5],\n",
+       "       [5.5, 3.8],\n",
+       "       [5.5, 3.7],\n",
+       "       [5.8, 3.9],\n",
+       "       [6. , 5.1],\n",
+       "       [5.4, 4.5],\n",
+       "       [6. , 4.5],\n",
+       "       [6.7, 4.7],\n",
+       "       [6.3, 4.4],\n",
+       "       [5.6, 4.1],\n",
+       "       [5.5, 4. ],\n",
+       "       [5.5, 4.4],\n",
+       "       [6.1, 4.6],\n",
+       "       [5.8, 4. ],\n",
+       "       [5. , 3.3],\n",
+       "       [5.6, 4.2],\n",
+       "       [5.7, 4.2],\n",
+       "       [5.7, 4.2],\n",
+       "       [6.2, 4.3],\n",
+       "       [5.1, 3. ],\n",
+       "       [5.7, 4.1],\n",
+       "       [6.3, 6. ],\n",
+       "       [5.8, 5.1],\n",
+       "       [7.1, 5.9],\n",
+       "       [6.3, 5.6],\n",
+       "       [6.5, 5.8],\n",
+       "       [7.6, 6.6],\n",
+       "       [4.9, 4.5],\n",
+       "       [7.3, 6.3],\n",
+       "       [6.7, 5.8],\n",
+       "       [7.2, 6.1],\n",
+       "       [6.5, 5.1],\n",
+       "       [6.4, 5.3],\n",
+       "       [6.8, 5.5],\n",
+       "       [5.7, 5. ],\n",
+       "       [5.8, 5.1],\n",
+       "       [6.4, 5.3],\n",
+       "       [6.5, 5.5],\n",
+       "       [7.7, 6.7],\n",
+       "       [7.7, 6.9],\n",
+       "       [6. , 5. ],\n",
+       "       [6.9, 5.7],\n",
+       "       [5.6, 4.9],\n",
+       "       [7.7, 6.7],\n",
+       "       [6.3, 4.9],\n",
+       "       [6.7, 5.7],\n",
+       "       [7.2, 6. ],\n",
+       "       [6.2, 4.8],\n",
+       "       [6.1, 4.9],\n",
+       "       [6.4, 5.6],\n",
+       "       [7.2, 5.8],\n",
+       "       [7.4, 6.1],\n",
+       "       [7.9, 6.4],\n",
+       "       [6.4, 5.6],\n",
+       "       [6.3, 5.1],\n",
+       "       [6.1, 5.6],\n",
+       "       [7.7, 6.1],\n",
+       "       [6.3, 5.6],\n",
+       "       [6.4, 5.5],\n",
+       "       [6. , 4.8],\n",
+       "       [6.9, 5.4],\n",
+       "       [6.7, 5.6],\n",
+       "       [6.9, 5.1],\n",
+       "       [5.8, 5.1],\n",
+       "       [6.8, 5.9],\n",
+       "       [6.7, 5.7],\n",
+       "       [6.7, 5.2],\n",
+       "       [6.3, 5. ],\n",
+       "       [6.5, 5.2],\n",
+       "       [6.2, 5.4],\n",
+       "       [5.9, 5.1]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qr_selection(X, y)"
    ]
   },
   {
